# flexgate-proxy

./: .bench-targets.pids  .containerignore  .coolify  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  404.html  ADMIN_UI_STATUS.md  AGENT_SESSION_SUMMARY.md  AI_ADMIN_UI_COMPLETE.md  AI_CLI_COMPLETE.md  AI_CLI_IMPLEMENTATION_COMPLETE.md  AI_CLI_QUICK_REFERENCE.md  AI_DECISION_CAPABILITY_ASSESSMENT.md  AI_FEATURES_COMPLETE.md  AI_IMPLEMENTATION_PLAN.md  AI_INCIDENT_ANALYSIS_COMPLETE.md  AI_INCIDENT_ANALYSIS_QUICK_REF.md  AI_INCIDENT_TRACKING_COMPLETE.md  AI_INCIDENT_TRACKING_IMPLEMENTED.md  AI_INCIDENT_TRACKING_SYSTEM.md  AI_NATIVE_ROADMAP.md  AI_PHASE0_DAY1_COMPLETE.md  AI_PHASE0_DAY2_COMPLETE.md  AI_PHASE0_DAY3_COMPLETE.md  AI_PHASE0_DAYS4-5_COMPLETE.md  AI_PROVIDERS_WORKING.md  AI_QUICK_TEST.md  AI_TESTING_GUIDE_ADMIN_UI.md  AI_TESTING_SUMMARY.md  ALL_FILES_COMMITTED.md  ALL_TESTS_COMPLETE.md  ANALYTICS_TYPE_FIX.md  API_404_FIX.md  API_IMPLEMENTATION_STATUS.md  API_KEY_SECURITY.md  (+241 more)
.githooks/: commit-msg
.github/: ACTIVATION_CHECKLIST.md  SECURITY_AUTOMATION.md  WORKFLOWS.md  dependabot.yml
.progress/: phase-0-core-stabilization.md
__tests__/: app.test.js  app.test.ts  rules-api.test.ts  settings-api.spec.ts  troubleshooting-settings-e2e.spec.ts  troubleshooting-settings.test.ts  webhooks.test.ts
admin-ui/: .env.test  .eslintignore  ALL_CHARTS_WASM_COMPLETE.md  FEATURE_3_COMPLETE.md  FEATURE_4_IN_PROGRESS.md  OAUTH_MIGRATION_PLAN.md  WASM_INTEGRATION_COMPLETE.md  WASM_LOADING_ISSUE.md  WEB_WORKER_TEST.md  WORKER_WASM_GUIDE.md  overview.html  package-lock.json  package.json  start-dev.sh
admin-ui/wasm/metrics-processor/: .gitignore  Cargo.toml
admin-ui/wasm/metrics-processor/src/: lib.rs
ai/: TESTING_CHECKLIST.html  TESTING_GUIDE.html  TEST_SCENARIOS.html  index.html  use-cases.html
api/: index.html
architecture/: ARCHITECTURE_DECISION_MONOREPO_VS_MICROSERVICES.html  ARCHITECTURE_SPLIT.html  HYBRID_STRATEGY.html  REPO_SPLIT.html  index.html  overview.html
assets/: CLEANUP_SUMMARY.md.CYsweKed.js  CLEANUP_SUMMARY.md.CYsweKed.lean.js  JETSTREAM_IMPLEMENTATION_SUMMARY.md.CCyV3Ztf.js  JETSTREAM_IMPLEMENTATION_SUMMARY.md.CCyV3Ztf.lean.js  JETSTREAM_QUICKSTART.md.Cw-cciGT.js  JETSTREAM_QUICKSTART.md.Cw-cciGT.lean.js  LANDING_PAGE_COPY.md.BSpn92u2.js  LANDING_PAGE_COPY.md.BSpn92u2.lean.js  README.html  (+214 more)
flexgate-rust-security/: Cargo.toml  Containerfile  README.md
flexgate-rust-security/src/: cache.rs  main.rs  validator.rs
(+714 files in other folders)
