[package]
name = "metrics-processor"
version = "0.1.0"
authors = ["FlexGate Team"]
edition = "2021"
description = "High-performance metrics data processing in WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

# Enable wee_alloc for smaller binary size
[features]
default = ["wee_alloc"]
